--- a/bin/zeus.css
+++ b/bin/zeus.css
@@ -1425,10 +1425,10 @@ body {
   .Layout__column--xl-offset-12 {
     margin-left: 100%; } }
 
-.Layout__column--fill-parent {
+.util-zeus-fill-parent {
   display: flex;
   align-items: stretch;
   flex-direction: column; }
 
-.Layout__column--fill-child {
+.util-zeus-fill-child {
   flex: 1; }
